--- a/3 Classification/Week 1/module-2-linear-classifier-assignment-blank.ipynb
+++ b/3 Classification/Week 1/module-2-linear-classifier-assignment-blank.ipynb
@@ -56,11 +56,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This non-commercial license of GraphLab Create for academic use is assigned to ads@dk-us.com and will expire on May 16, 2018.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.1 started. Logging: /tmp/graphlab_server_1505566594.log\n"
+     ]
+    }
+   ],
    "source": [
     "products = graphlab.SFrame('amazon_baby.gl/')"
    ]
@@ -74,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -170,7 +185,7 @@
        "You can use print_rows(num_rows=m, num_columns=n) to print more rows and columns."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
